# labs

lab1/: CMakeLists.txt  main.cpp
lab1/fan/: CMakeLists.txt  fan.cpp  fan.h
lab2/: CMakeLists.txt  form.h  form.txt  main.cpp
lab2/form/: CMakeLists.txt  form.cpp  form.h
lab2/planet/: CMakeLists.txt  class.cpp  class.h
lab3/: CMakeLists.txt  main.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/MyStack/: CMakeLists.txt  MyStack.cpp  MyStack.h
lab5/: CMakeLists.txt  main.cpp
lab5/VectorSet/: CMakeLists.txt  MyVector.cpp  MyVector.h  Myset.cpp  Myset.h
lab6/: CMakeLists.txt  main.cpp
lab6/Polinom/: CMakeLists.txt  Polinomial.h  Term.h  Vector.h
lab7/: CMakeLists.txt  main.cpp
lab7/worker/: CMakeLists.txt  Vector.h  abstract_class.h  administration.cpp  administration.h  enginer.cpp  enginer.h  functions.cpp  hr.h  worker.h
lab8/: CMakeLists.txt  main.cpp
